<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.RegisterActivity"
        android:background="@color/background">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">

            <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/brand"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="@drawable/brand"/>

                <TextView
                        android:id="@+id/welcome"
                        android:layout_below="@id/brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/robotolight"
                        android:textSize="22sp"
                        android:textColor="@color/textbrand"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/register_title"/>

                <EditText
                        android:layout_marginTop="40dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_below="@id/welcome"
                        android:id="@+id/name"
                        android:fontFamily="@font/robotomedium"
                        android:inputType="textAutoComplete"
                        android:layout_width="match_parent"
                        android:hint="@string/name"
                        android:layout_height="50dp"/>

                <EditText
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_below="@id/name"
                        android:id="@+id/email"
                        android:fontFamily="@font/robotomedium"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        android:layout_height="50dp"/>

                <EditText
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="20dp"
                        android:fontFamily="@font/robotomedium"
                        android:layout_below="@id/email"
                        android:id="@+id/password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                <Button
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/robotomedium"
                        android:id="@+id/btnRegister"
                        android:layout_marginHorizontal="59dp"
                        android:layout_below="@id/password"
                        android:text="@string/register_signup"
                        android:textSize="15sp"
                        android:background="@drawable/buttonblue"
                        android:textColor="@color/textbuttoncolor"
                        android:textAllCaps="false"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>