<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000">

    <RelativeLayout
            android:background="@color/white"
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/texttitle"
                android:layout_marginTop="44dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtask_addnewtask"
                android:fontFamily="@font/robotomedium"
                android:textSize="13sp"
        />

        <ScrollView
                android:layout_below="@id/texttitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/title"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:hint="@string/addtask_title"
                        android:fontFamily="@font/robotomedium"
                        android:textSize="20sp"
                        android:layout_height="40dp"/>

                <EditText
                        android:id="@+id/description"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:hint="@string/addtask_description"
                        android:fontFamily="@font/robotomedium"
                        android:textSize="20sp"
                        android:lines="10"
                        android:minLines="6"
                        android:maxLines="10"
                        android:layout_height="100dp"/>


                <View
                        android:layout_marginHorizontal="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                />

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/projects"
                        android:layout_width="match_parent"
                        android:layout_height="62dp">

                </android.support.v7.widget.RecyclerView>

                <View
                        android:layout_marginHorizontal="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                />

                <Button
                        android:textSize="13sp"
                        android:fontFamily="@font/robotomedium"
                        android:text="@string/addtask_selectdate"
                        android:textAllCaps="false"
                        android:layout_marginLeft="20dp"
                        android:background="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"/>

                <Button
                        android:layout_marginTop="20dp"
                        android:layout_marginHorizontal="20dp"
                        android:id="@+id/add"
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:fontFamily="@font/robotomedium"
                        android:textColor="@color/white"
                        android:background="@drawable/buttonblue"
                        android:text="@string/addtask_addtask"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <ImageButton
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/closetask"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/transparent"
            android:src="@drawable/closetask"
    />


</RelativeLayout>
